# Hashiwokakero

./: .gitignore  Caddyfile  Cargo.toml  Clauses.md  Dockerfile  README.md  examples.md  fly.toml  package-lock.json  package.json
.github/workflows/: fly_deploy.yml
backend/: Cargo.toml
backend/benches/: benchmarks_parser.rs  hashi_benchmark.rs
backend/input/: bridges1.txt  bridges2.txt  bridges3.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test3.txt  test4.txt  test5.txt  test6.txt  test9.txt
backend/src/: dfs.rs  generate_clauses.rs  generator.rs  lib.rs  main.rs  modes.rs  parse_input.rs  printer.rs  reconstruct.rs  solver.rs  writer.rs
backend/tests/: integration_test.rs  test_parse_input.rs  test_solver.rs  test_writer.rs
frontend/: Cargo.toml
frontend/src/: app.rs  main.rs
frontend/tauri/: Cargo.toml  tauri.conf.json
frontend/tauri/src/: main.rs
solutions/: test1.cnf  test10.cnf  test10.txt  test11.cnf  test11.txt  test12.cnf  test12.txt  test13.cnf  test13.txt  test14.cnf  test14.txt  test15.cnf  test15.txt  test16.cnf  test16.txt  test17.cnf  test17.txt  test19.cnf  test19.txt  test2.cnf  test20.cnf  test20.txt  test22.cnf  test22.txt  test23.cnf  test24.cnf  test24.txt  test4.cnf  test4.txt  test5.cnf  test6.cnf  test6.txt  test7.cnf  test7.txt  test8.txt  test9.txt
src/: app.rs  lib.rs  main.rs
style/: output.css
