[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["cargo"] }
splr = "0.17.1"


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks_parser"
harness = false

