[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["cargo"] }
itertools = "0.11.0"
splr = "0.17.1"
rand = "0.8.5"


[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.2.0"

[[bench]]
name = "hashi_benchmark"
harness = false
